<resources>
    <string name="app_name">Studio X Ottawa</string>
    <string name="send">Send</string>
    <string name="type_message_here">Type Message Here</string>
    <string name="your_message_question">Your Message/Question:</string>
    <string name="subject">Subject:</string>
    <string name="email">Email:</string>
    <string name="your_email_required">Your Email (Required)</string>
    <string name="name">Name:</string>
    <string name="your_name_required">Your Name (Required)</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="News_FragmentTitle">Title: </string>
    <string name="News_FragmentDescription">Description: </string>
    <string name="News_FragmentLink">Link: </string>
    <string name="News_FragmentDate">Date: </string>
    <string name="News_close">Close</string>
    <string name="lost_your_password"><u>Lost your Password?</u></string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? <u>Sign up here!</u></string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="login">Login</string>
    <string name="Aboutus1">


        "Studio X Ottawa is a unique hub of experienced local dance and fitness professionals "
        "comprise of the Studio’s team as well as independent instructors who rent the space to"
        "teach various classes. \n \n \n"
        "We offer Latin Dance classes (like Salsa, Bachata) And Fitness classes "
        "(Zumba, Zumba Sentao, Zumba Toning, Strong by Zumba, Pound Fitness, etc.). "
        "And, our renters teach a variety of dance and fitness classes. \n \n \n "
        "We also rent the studios/rooms to teach or for practices, rehearsals, "
        "parties (baby shower, bridal shower, sweet sixteen, etc.), meetings, photoshoots, "
        "exhibitions, social gathering, etc. as well as Corporate events. \n \n "

    </string>
    <string name="Aboutus2">
        "STUDIO X MAIN INSTRUCTORS QUALIFICATIONS:"
    </string>
    <string name="Aboutus3">
        "We have completed private classes and trainings with the following professional dancers and coaches:"
    </string>
    <string name="Aboutus4">
        " Adriano Ieropoli and Samantha Scali (Salsa On2 World Champions)\n \n"
        " Corinne Tardieu and Victor Alexis (Canadian Salsa, Bachata and Hustle Champions)\n \n"
        " David Zapeda and Paulina Posadas (6x World Salsa Champions)\n \n "
        " Anya Katsevman (World Salsa Champion and Judge)\n \n "
        " Katie Marlow (Director of World Salsa Summit, World Cabaret Exhibition Champion, Judge)\n \n "
        " Edson Vallon (Owner and director of SaltiMambo Dance School in Montreal Canada)\n \n"
        " Caroline Paré (Owner and director of Caroline Paré Danse Latine)\n \n"
        " Carla Voconii (Glam Mambo Company)\n \n"
        " Santo Rico \n"
    </string>
    <string name="Aboutus5">
        "Bootcamps and workshops:"
    </string>
    <string name="Aboutus6">
        " 2019 Master Class (Salsa On2 – Mambo) with Eddie and Maria Torres \n \n"
        " 2019 Master Class (Dominican Bachata) with Alex Morel at World Salsa Summit \n \n"
        " 2018 Bachata Intensive with MG Latin Dance from Los Angeles \n \n"
        " 2018 Master class with Adolfo in Montreal \n \n"
        " 2018 Master class with Rodrigo Cortazar \n \n"
        " 2018 Weekend training with Yvonne Gutierez in Montreal \n \n"
        " 2017 Weekend training in Montreal with Eddie Torres and Yvonne Gutierez \n \n"
        " 2016 Karel Flores Weekend Bootcamp Challenge in Montreal \n \n"
        " 2013 Brazilian Zouk Training with K-Yo from Brazil \n \n"
        " 2013 Cultural Weekend in New York (Spanish Harlem) with Eddy Torres, Maria Torres, Mambo D, Yvonne Gutierez, etc. \n \n"
        " 2010 Styling weekend in Boston with Karel Flores, Ana Masacote, Burju, Julissa Cruz and Shani Talmor \n \n"
        " 2009 and 2011 Masacote Retreat \n"
    </string>
    <string name="Aboutus7">
        "Dance Certifications:"
    </string>
    <string name="Aboutus8">
        "World Mastery Certifications (Adolfo, Alex and Desiree, Anita, Korke and Judith), My Salsa Online, Salsa Bachata Online"
       "Fitness Certifications:\n \n"
       "YMCA, Canfitpro, CPR, Zumba (Gold, Kids, Junior, Sentao, Toning, Strong), Zumbini, Pound"
        "Fitness, Piyo, YogaFit, Qidance, Insanity, Piloxing \n"
    </string>
    <string name="Aboutus9">
        "Work Experience:"
    </string>
    <string name="Aboutus10">
        "2017-present\n"
        "Fitness instructors for Bell Canada (corporate)\n\n"
        "2013-present\n"
        "Directors and Instructors at Studio X Ottawa\n\n"
        "2011-Présent\n"
        "Wedding dance choreographies\n\n"
        "June 2019\n"
        "Teaching Bachata and Salsa Intro workshops for Latin Sparks Festival\n\n"
        "May 2019\n"
        "Teaching Dominical Bachata Workshop at Montreal Salsa Convention\n\n"
        "February 2019\n"
        "Teaching Dominican Bachata Workshop at Ottawa Bachata Festival\n\n"
        "November 2018\n"
        "Teaching On2 Workshop at Montreal Salsa Convention\n\n"
        "Summer 2018\n"
        "Montreal Tour (shows at Moka, Baila Con Gusto and Bachata Fusion (Marina de Repentigny))\n\n"
        "Summer 2017\n"
        "Teaching Cha Cha Cha workshop at Ottawa Salsa Convention\n\n"
        "2012-2014\n"
        "YMCA fitness instructor\n"
        "City of Gatineau fitness instructor\n"
        "Old Town House Fitness instructor\n"
        "Fitness instructor for older adults at Académie des retraités de l’Outaouais\n\n"
        "2010-2014\n"
        "Blackanese Mambo Team Directors"
        "\n\n\n\n      Copyright 2013 - Studio X Ottawa Inc. | All Rights Reserved |\n\n"
    </string>
    <string name="AboutusTitle">
        "     Welcome to Studio X Ottawa Inc."</string>
    <string name="Aboutus0">
        "YOUR “one stop” eclectic dance, fitness and space rental Centre!\n"</string>
    <string name="SoulNadege">"Our Main instructors!"
                              "Soul and Nadège (Dancing since 1999)\n"</string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    <string name="title_activity_notif">NotificationActivity</string>
    <string name="notifText">
        "This is a reminder that you have an appointment on: \n "
        "\n"
        "Studio X Ottawa\n"
    </string>
    <string name="previous_button">Previous Page</string>
    <string name="next_button">Next Page</string>
    <string name="thumbnail_preview">Video Thumbnail</string>
    <string name="title_activity_services">Services</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="PurchaseTitle">Would you like to purchase this?</string>
    <string name="PurchaseConfirm">Thank you for your purchase</string>
    <string name="free_vids">Free</string>
    <string name="youtube_button" translatable="false">Youtube</string>
    <string name="prem_vids">Premium</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Full Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="createaccount">Create New Account</string>
    <string name="signinaccount">Already Registered? <u>Sign In</u></string>
    <string name="enter_email_hint">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcomeHeader">Studio X Ottawa</string>
    <string name="user">User</string>
    <string name="add_class_button">add event</string>
<string name="sign_out">Sign out</string>
<string name="about_us">About Us</string>
<string name="products_purchased">Products Purchased</string>
<string name="contact_us">Contact Us</string>
<string name="account_information">Account Information</string>
<string name="admin_portal">Admin Portal</string>
<string name="events_booked">Events Booked</string>
    <string name="type_subject_here">Type Subject Here</string>
    <string name="book_now">Book Now</string>
    <string name="event_staff">Event Staff</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="call_studio_x_ottawa">Contact Studio X Ottawa</string>
    <string name="new_event">Add New Event</string>
    <string name="fitness_hint">Fitness Class</string>
    <string name="no_date">No Date Selected</string>
    <string name="time_hint" translatable="false">6:00PM - 6:55PM</string>
    <string name="create_event">Create Event</string>
    <string name="create_news">Create News</string>
    <string name="news_title_hint">News Title</string>
    <string name="description">Description</string>
    <string name="image_url_hint">Image URL</string>
    <string name="add_product">Add Product</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_price_hint">Product Price</string>
    <string name="schedule">Schedule</string>
    <string name="services">Services</string>
    <string name="vod">Video On Demand</string>
    <string name="news">News</string>
    <string name="contact">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin Tasks</string>
    <string name="forgot">Forgot Password</string>
    <string name="purchaseSummary">Purchase Summary</string>
    <string name="amount">Amount:</string>
    <string name="pay">Pay</string>
    <string name="back">Go Back</string>
    <string name="call">Call StudioX Ottawa</string>
    <string name="add_service">Add Services</string>
    <string name="add_event">Add Event</string>
    <string name="add_news">ADD NEWS</string>
    <string name="report">Report</string>
    <string name="total_price">Total Price</string>
    <string name="cancel">cancel</string>
    <string name="place_order">Place Order</string>
    <string name="book_event">Book Now</string>
    <string name="sa_cancel">Cancel</string>
    <string name="sa_add">Add</string>
    <string name="sa_toCart">to Cart?</string>
    <string name="sa_dialog_add">Add </string>
    <string name="EmptyCart">Cart is Empty</string>
    <string name="onFailureError">Error: </string>
    <string name="successful_product_adding">Product Successfully Added!</string>
    <string name="invalid_input">Data missing, unable to add</string>
    <string name="choose_email_client">Choose one application</string>
    <string name="select_image_btn">Select Image...</string>
    <string name="title_activity_add_videos" translatable="false">AddVideos</string>
    <string name="update_library">Update Youtube Library</string>
    <string name="add_video">Add New Video</string>
    <string name="video_url_hint">Video File Name</string>
    <string name="video_add_success">New Video Added</string>
    <string name="updated_library">Youtube Library updated</string>
    <string name="EventCreated">Event Created Successfully!</string>
    <string name="studioxlogo">StudioXLogo</string>
    <string name="create_new_event">Create Event</string>
    <string name="fitness_class">Fitness Class</string>
    <string name="button_that_starts_up_datepickerdialog">Calender Icon</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="_6_00pm_6_55pm">6:00pm-6:55pm</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="website">Website</string>
    <string name="our_latest_news">Our Latest News!</string>
    <string name="calender_icon">Calender Icon</string>
    <string name="administrator">Administrator</string>
    <string name="account_details">Account Details</string>
    <string name="full_name">Full Name</string>
    <string name="email_minus_colon">Email</string>
</resources>