<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".staff.AddEvent">

    <TextView
        android:id="@+id/add_Product_title"
        android:text="@string/new_event"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <EditText
        android:layout_marginTop="100dp"
        android:layout_below="@id/add_Product_title"
        android:id="@+id/new_product_name"
        android:hint="@string/fitness_hint"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />

    <ImageButton
        android:id="@+id/new_product_image"
        android:src="@drawable/ic_baseline_date_range_24"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/new_product_name"
        />
    <TextView
        android:id="@+id/newEventDateTV"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/new_product_name"
        android:text="@string/no_date"
        android:textSize="18sp"
        android:layout_toRightOf="@id/new_product_image"
        />

    <EditText
        android:layout_below="@id/new_product_image"
        android:id="@+id/new_product_price"
        android:hint="@string/time_hint"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />

    <Button
        android:id="@+id/AddProductBtn"
        android:text="@string/create_event"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/new_product_price"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/StudioXPink"
        />

</RelativeLayout>