<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".welcome.MoreFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/website_Button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/logout_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:text="@string/website"
            android:backgroundTint="@color/Transparent"
            app:icon="@drawable/ic_baseline_web_24"
            />
        <Button
            android:id="@+id/admin_portal_button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/website_Button"
            android:layout_centerVertical="false"
            android:visibility="invisible"
            android:backgroundTint="@color/Transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/admin_portal"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:icon="@drawable/ic_baseline_build_24" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/about_us_button"
            android:layout_centerVertical="false"
            android:backgroundTint="@color/Transparent"

            android:fontFamily="sans-serif-light"
            android:text="@string/sign_out"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:icon="@drawable/ic_baseline_logout_24" />

        <Button
            android:id="@+id/about_us_button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/contact_us_button"
            android:backgroundTint="@color/Transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/about_us"
            android:textColor="@color/white"
            app:icon="@drawable/ic_baseline_help_24" />

        <Button
            android:id="@+id/products_purchased_button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/events_booked_button"
            android:backgroundTint="@color/Transparent"
            android:text="@string/products_purchased"
            app:icon="@drawable/ic_baseline_store_24" />

        <Button
            android:id="@+id/contact_us_button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/products_purchased_button"
            android:backgroundTint="@color/Transparent"
            android:text="@string/contact_us"
            app:icon="@android:drawable/sym_action_call" />

        <Button
            android:id="@+id/events_booked_button"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/account_info_button"
            android:backgroundTint="@color/Transparent"
            android:text="@string/events_booked"
            app:icon="@drawable/ic_baseline_date_range_24" />

        <Button
            android:id="@+id/account_info_button"
            android:layout_width="match_parent"
            android:layout_height="90dp"

            android:backgroundTint="@color/Transparent"
            android:includeFontPadding="true"
            android:text="@string/account_information"
            app:icon="@drawable/ic_baseline_account_circle_24" />

    </RelativeLayout>


</ScrollView>