<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".schedule.BookAppointments"
    >

    <TextView
        android:id="@+id/bookEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/event_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/bookEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookEventName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/event_date"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/bookEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookEventDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/event_time"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/bookEventStaff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookEventTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/event_staff"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:text="@string/book_event"
        android:id="@+id/bookEventButton"
        android:layout_below="@id/bookEventStaff"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-light"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:textSize="25sp"
        android:backgroundTint="@color/StudioXPink"
        />
</RelativeLayout>