<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".aboutus.AboutusActivity">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >



                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:paddingBottom="20dp"
                    android:text="@string/AboutusTitle"
                    />

                <ImageView
                    android:id="@+id/aboutusLego"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:src="@drawable/big_logo"
                    />

                <TextView
                    android:paddingTop="20dp"
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/Aboutus0"

                    />


                <TextView
                    android:id="@+id/textView1"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Aboutus1"
                    />



                <ImageView
                    android:id="@+id/imageSoulNadege"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/SoulNadege"
                    android:orientation="horizontal"
                    android:src="@drawable/soulnadege"
                    />

                <TextView
                    android:id="@+id/textViewimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/SoulNadege" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="18sp"

                    android:text="@string/Aboutus2" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Aboutus3" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Aboutus4" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Aboutus5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:text="@string/Aboutus6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:text="@string/Aboutus7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Aboutus8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Aboutus9" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/Aboutus10" />


            </LinearLayout>


</ScrollView>